# GUIModelTest

./: .env.example  .gitignore  README.md  pyproject.toml  run_tests.py
docs/architecture/: 2026-04-20-2100-系统架构概览.md
docs/development/: 2026-04-20-2100-开发进度-v3.2.md  (+1 more)
output/: report_20260420_125222.md  report_20260420_140227.md  report_20260420_140546.md  report_20260420_141528.md  report_20260420_142146.md  report_20260420_150515.md  report_20260420_150736.md  report_20260420_154414.md  report_20260420_161221.md  report_20260420_161257.md  report_20260420_161817.md  report_20260420_164411.md  report_20260420_164534.md  report_20260420_171032.md  report_20260420_175923.md  report_20260420_180025.md  report_20260420_180040.md  report_20260420_182026.md  report_20260420_182728.md  report_20260420_184831.md  report_20260420_184842.md  report_20260420_185108.md  report_20260420_203830.md  report_20260420_203937.md  report_20260420_203954.md  report_20260420_205057.md  report_20260420_205126.md  results_20260420_125222.json  results_20260420_140227.json  results_20260420_140546.json  results_20260420_141528.json  results_20260420_142146.json  results_20260420_150515.json  results_20260420_150736.json  results_20260420_154414.json  results_20260420_161221.json  results_20260420_161257.json  results_20260420_161817.json  results_20260420_164411.json  results_20260420_164534.json  (+14 more)
scripts/: convert_image.py  summarize_results.py  visualize_gt.py
src/: client.py  config.py  coord_formats.py  ground_truth.py  gui_plus_prompts.py  test_cases.py  test_runner.py
(+4 files in other folders)
